--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Install dependencies 
         run: npm install  
       - name: Check style
-        run: npm run eslint
+        run: npm run eslint -- --fix
