Build and test added

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,7 +12,14 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "16"
-      - name: Install dependencies 
+      - name: Install
         run: npm install  
-      - name: Check style
+      - name: Lint
         run: npm run eslint -- --fix
+      - name: Build
+        run: npm run build
+      - name: Test
+        run: npm test 
+    
+
+
