--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,15 +16,17 @@ jobs:
         run: npm install  
       - name: Install dependencies
         run: npm ci
+      - name: Fix warnings 
+        run: npm audit fix
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Lint
         run: npm run eslint -- --fix
       - name: Build
         run: npm run build
-      - name: Test
+      - name: Test - unit tests 
         run: npm test 
-      - name: Run Playwright tests
+      - name: Test - e2e tests
         run: npx playwright test
     
 
