--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start-prod": "node app.js",
     "test": "jest",
     "test:e2e": "playwright test",
-    "eslint": "eslint './**/*.{js,jsx}'",
+    "eslint": "eslint --fix './**/*.{js,jsx}'",
     "build": "webpack --mode production"
   },
   "repository": {
