--- a/fly.toml
+++ b/fly.toml
@@ -1,7 +1,3 @@
-# fly.toml app configuration file generated for teollisuuskatu-app on 2024-06-08T15:51:21+03:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
 
 app = 'teollisuuskatu-app'
 primary_region = 'arn'
@@ -26,3 +22,13 @@ primary_region = 'arn'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+
+[[http_service.checks]]
+  grace_period = "10s"
+  interval = "30s"
+  method = "GET"
+  timeout = "5s"
+  path = "/health"
+
+[deploy]
+  strategy = "canary"
