--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Fly.io - flyctl
         uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Deploy to fly.io
+        if: ${{ github.event_name == 'push' }}
         run: flyctl deploy --remote-only
         env:
             FLY_API_TOKEN: ${{secrets.FLY_API_TOKEN}}
