--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,5 @@ jobs:
       - name: commit messages
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
+        if: {{ contains($COMMIT_MESSAGES, "#skip") }}
         run: echo "$COMMIT_MESSAGES"
