--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,8 @@ jobs:
           COMMITS: ${{ toJson(github.event.commits) }}
         run: echo "$COMMITS"
       - name: commit messages
+        #if: ${{ !contains(github.event.head_commit.message, '#docs') }}
+        if: ${{ !contains(github.event.commits.*.message, '#docs') }}
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-        if: {{ contains($COMMIT_MESSAGES, "#skip") }}
         run: echo "$COMMIT_MESSAGES"
