--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         run: echo "$COMMITS"
       - name: commit messages
         ##if: ${{ !contains(github.event.head_commit.message, '#docs') }}
-        if: ${{ !contains(github.event.commits.*.message, '#skip') }}
+        if: ${{ !contains(toJson(github.event.commits.*.message), '#skip') }}
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         run: echo "$COMMIT_MESSAGES"
