--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,7 @@ jobs:
         run: echo "$COMMITS"
       - name: commit messages
         ## Addint comment to test PR
+        ## Another comment  
         if: ${{ !contains(join(toJson(github.event.commits.*.message), ' '), '#skip') }}
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
