--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,5 +23,5 @@ jobs:
         ## Another comment  
         if: ${{ !contains(join(toJson(github.event.commits.*.message), ' '), '#skip') }}
         env:
-          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
+          COMMIT_MESSAGES: ${{ join(toJson(github.event.commits.*.message), ' ') }}
         run: echo "$COMMIT_MESSAGES"
