--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Fly.io - flyctl
         uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Deploy to fly.io
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'push' }} && ${{ !contains(join(toJson(github.event.commits.*.message), ' '), '#skip') }}
         run: flyctl deploy --remote-only
         env:
             FLY_API_TOKEN: ${{secrets.FLY_API_TOKEN}}
@@ -42,6 +42,7 @@ jobs:
   tag_release:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
+    if: ${{ github.event_name == 'push' }} && ${{ !contains(join(toJson(github.event.commits.*.message), ' '), '#skip') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
