--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: success
         uses: rjstone/discord-webhook-notify@v1
-        if: !{{ success() }}
+        if: {{ success() }}
         with: 
             username: ${{ github.event.head_commit.committer.username }}
             severity: error
