--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
         with: 
             username: ${{ github.event.head_commit.committer.username }}
             severity: info
-            description: "A new version deployed" 
+            description: A new version deployed 
             details: ${{"A new version of application deployed by " + github.event.head_commit.committer.username}}
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: success
@@ -38,7 +38,7 @@ jobs:
         with: 
             username: ${{ github.event.head_commit.committer.username }}
             severity: error
-            description: "A build failed" 
+            description: A build failed
             details: ${{"Commit " github.event.head_commit.url + " by " + github.event.head_commit.committer.username + " broke the build"}}
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
