--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,18 +23,20 @@ jobs:
         env:
           COMMIT_MESSAGES: ${{ join(toJson(github.event.commits.*.message), ' ') }}
         run: echo "$COMMIT_MESSAGES"
+
       - name: success
         uses: rjstone/discord-webhook-notify@v1
-        if: {{ success() }}
+        if: success()
         with: 
             username: ${{ github.event.head_commit.committer.username }}
             severity: info
             description: A new version deployed 
             details: format("A new version of application deployed by {0}", ${{github.event.head_commit.committer.username}})
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-      - name: success
+
+      - name: failure
         uses: rjstone/discord-webhook-notify@v1
-        if: {{ success() }}
+        if: success()
         with: 
             username: ${{ github.event.head_commit.committer.username }}
             severity: error
