--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,22 +25,22 @@ jobs:
         run: echo "$COMMIT_MESSAGES"
 
       - name: success
-        uses: rjstone/discord-webhook-notify@v1
+        uses: rjstone/discord-webhook-notify@v1.0.4
         if: success()
         with: 
-            username: ${{ github.event.head_commit.committer.username }}
+            username: ${{ github.event.head_commit.author.name }}
             severity: info
             description: A new version deployed 
-            details: format("A new version of application deployed by {0}", ${{github.event.head_commit.committer.username}})
+            details: A new version of application deployed by " ${{github.event.head_commit.author.name}}
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
       - name: failure
-        uses: rjstone/discord-webhook-notify@v1
+        uses: rjstone/discord-webhook-notify@v1.0.4
         if: success()
         with: 
             username: ${{ github.event.head_commit.committer.username }}
             severity: error
             description: A build failed
-            details: format("Commit " {0} "by " {1} " broke the build" ${{github.event.head_commit.url}}, ${{github.event.head_commit.committer.username}}
+            details: Commit " ${{github.event.head_commit.url}}  "by " ${{github.event.head_commit.author.name}} " broke the build" 
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
