--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,6 +38,25 @@ jobs:
         run: flyctl deploy --remote-only
         env:
             FLY_API_TOKEN: ${{secrets.FLY_API_TOKEN}}
+      - name: Build success
+        uses: rjstone/discord-webhook-notify@v1.0.4
+        if: success()
+        with: 
+            username: ${{ github.event.head_commit.author.name }}
+            severity: info
+            description: A new version deployed 
+            details: A new version of application deployed by ${{github.event.head_commit.author.name}}
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+    
+      - name: Build failed
+        uses: rjstone/discord-webhook-notify@v1.0.4
+        if: failure()
+        with: 
+            username: ${{ github.event.head_commit.committer.username }}
+            severity: error
+            description: A build failed
+            details: Commit ${{github.event.head_commit.url}} by ${{github.event.head_commit.author.name}} broke the build 
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
   
   tag_release:
     needs: [simple_deployment_pipeline]
