--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
             username: ${{ github.event.head_commit.author.name }}
             severity: info
             description: A new version deployed 
-            details: A new version of application deployed by " ${{github.event.head_commit.author.name}}
+            details: A new version of application deployed by ${{github.event.head_commit.author.name}}
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
       - name: failure
@@ -41,6 +41,6 @@ jobs:
             username: ${{ github.event.head_commit.committer.username }}
             severity: error
             description: A build failed
-            details: Commit " ${{github.event.head_commit.url}}  "by " ${{github.event.head_commit.author.name}} " broke the build" 
+            details: Commit ${{github.event.head_commit.url}} by ${{github.event.head_commit.author.name}} broke the build 
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
