--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,6 @@ jobs:
             description: A new version deployed 
             details: A new version of application deployed by ${{github.event.head_commit.author.name}}
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-
       - name: failure
         uses: rjstone/discord-webhook-notify@v1.0.4
         if: failure()
@@ -44,4 +43,19 @@ jobs:
             description: A build failed
             details: Commit ${{github.event.head_commit.url}} by ${{github.event.head_commit.author.name}} broke the build 
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-
+  url_check:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Ping URL
+        uses: jtalk/url-health-check-action@v4
+        with:
+        # Check the following URLs one by one sequentially
+            url:  ${{ vars.HEALTH_CHECK_URL }}
+      - name: failure
+        uses: rjstone/discord-webhook-notify@v1.0.4
+        if: failure()
+        with: 
+            severity: error
+            description: URL health check failed 
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      
