--- a/.github/workflows/schedule_jobs.yml
+++ b/.github/workflows/schedule_jobs.yml
@@ -1,6 +1,7 @@
+name: Scheduled jobs 
 on:
     schedule:
-        - cron: "0 * * * *"
+        - cron: "0 0 * * *"
 jobs:
     url_check:
         runs-on: ubuntu-20.04
@@ -8,8 +9,8 @@ jobs:
           - name: Ping URL
             uses: jtalk/url-health-check-action@v4
             with:
-                url:  ${{ vars.HEALTH_CHECK_URL }}
-          - name: failure
+                url: ${{ vars.HEALTH_CHECK_URL }}
+          - name: Ping failed
             uses: rjstone/discord-webhook-notify@v1.0.4
             if: failure()
             with: 
