--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -39,7 +39,7 @@ jobs:
         env:
             FLY_API_TOKEN: ${{secrets.FLY_API_TOKEN}}
       - name: Build success
-        uses: rjstone/discord-webhook-notify@v1.0.4
+        uses: rjstone/discord-webhook-notify@v1
         if: success()
         with: 
             username: ${{ github.event.head_commit.author.name }}
@@ -49,10 +49,10 @@ jobs:
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
     
       - name: Build failed
-        uses: rjstone/discord-webhook-notify@v1.0.4
+        uses: rjstone/discord-webhook-notify@v1
         if: failure()
         with: 
-            username: ${{ github.event.head_commit.committer.username }}
+            username:  Fixed name for testing ${{ github.event.head_commit.committer.username }}
             severity: error
             description: A build failed
             details: Commit ${{github.event.head_commit.url}} by ${{github.event.head_commit.author.name}} broke the build 
