--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -39,24 +39,20 @@ jobs:
         env:
             FLY_API_TOKEN: ${{secrets.FLY_API_TOKEN}}
       - name: Build success
-        uses: rjstone/discord-webhook-notify@v1
+        uses: tsickert/discord-webhook@v5.3.0 
         if: success()
         with: 
             username: ${{ github.event.head_commit.author.name }}
-            severity: info
-            description: A new version deployed 
-            details: A new version of application deployed by ${{github.event.head_commit.author.name}}
-            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+            content: Info - A new version of application deployed by ${{github.event.head_commit.author.name}}
+            webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
     
       - name: Build failed
-        uses: rjstone/discord-webhook-notify@v1
+        uses: tsickert/discord-webhook@v5.3.0 
         if: failure()
         with: 
-            username:  Fixed name for testing ${{ github.event.head_commit.committer.username }}
-            severity: error
-            description: A build failed
-            details: Commit ${{github.event.head_commit.url}} by ${{github.event.head_commit.author.name}} broke the build 
-            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+            username: ${{ github.event.head_commit.committer.username }}
+            content: Error - A build failed, commit ${{github.event.head_commit.url}} by ${{github.event.head_commit.author.name}} broke the build 
+            webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
   
   tag_release:
     needs: [simple_deployment_pipeline]
