--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   simple_deployment_pipeline:
+    name: Simple deployment pipeline 
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
